--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_Layout.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_Layout.cshtml
@@ -44,5 +44,15 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+
+    
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    
+
+
 </body>
 </html>
