--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/storylisting.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/storylisting.css
@@ -50,8 +50,8 @@
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #E8E8E8;
     border-radius: 14px;
-    width: 50%;
-    height: 100%;
+    width: auto;
+    height: auto;
     color: grey;
 }
 
