Share your story (Edit)

--- a/MVC/CIPlatform/CIPlatform/Views/Home/ShareYourStory.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/ShareYourStory.cshtml
@@ -240,6 +240,7 @@
                     <div class="row" style="color: grey;">
 
                         <div class="col-12">
+                        <br>
                             <label>My Story</label>
                             <br>
                             <textarea  id="sDesc" rows="8" cols="137" style="border: 1px solid rgb(214, 213, 213);">
@@ -253,6 +254,7 @@
                     <div class="row"  style="color: grey;">
 
                         <div class="col-12">
+                        <br>
                             <label>Enter Video URL</label>
                             <input type="text" id="vidUrl" class="form-control" placeholder="Enter video url">
                         </div>
@@ -263,6 +265,7 @@
                 <br>
                     <div class="row" style="color: grey;">
                         <div class="col-12">
+                        <br />
                             <label>Upload your photos</label>
                           
 
@@ -273,12 +276,13 @@
                                     <button>Browse File</button>
                                     <input type="file" hidden>
                                   </div>
+                                  <br />
                        
                     
                         </div>
                     </div>
          <br><br><br>
-                    <div class="row">
+                    <div class="row all-btns">
 
                         <div class="col-4">
                             <button class="btn-cancle">Cancel</button>
@@ -289,7 +293,7 @@
                         </div>
 
                         <div class="col-4">
-                            <button class="btn-save">Save</button>&nbsp;&nbsp;&nbsp;
+                            <button class="btn-save" onclick="editstory()">Save</button>&nbsp;&nbsp;&nbsp;
                             <button onclick="addstory()" class="btn-submit">Submit</button>
                         </div>
 
