--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
@@ -310,7 +310,7 @@
                 <div class="card-body">
                   <h5 class="card-title" id="processedStoryData">@itemss.Title</h5>
                   <p class="card-text" style="text-align: justify; font-size: small;">@itemss.Description</p>
-                  <a class="card-text" style="text-align: justify; font-size: medium; color:blue;" href="@itemss.VidUrl">@itemss.VidUrl</a>
+                  <a class="card-text" style="text-align: justify; font-size: medium; color:blue; height:auto; width:auto;" href="@itemss.VidUrl">@itemss.VidUrl</a>
                     <br><br>
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
